k8s/microservice-boilerplate.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
    service: hello-world
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
    version: 0.0.4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
      version: 0.0.4
  template:
    metadata:
      labels:
        app: hello-world
        version: 0.0.4
    spec:
      serviceAccountName: hello-world
      containers:
      - name: hello-world
        image: edwinalex035/hello-world:0.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
