k8s/deployment.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-boilerplate-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-boilerplate
spec:
  hosts:
    - "*"
  gateways:
    - microservices-boilerplate-gateway
  http:
    - match:
        - uri:
            exact: /api
      route:
        - destination:
            host: hello-world
            port:
              number: 8080
