k8s/microservice-boilerplate-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-boilerplate-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-boilerplate
spec:
  hosts:
    - "*"
  gateways:
  - microservice-boilerplate-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        exact: /static
    route:
    - destination:
        host: hello-world
        port:
        number: 8080
